# email-bot

./: .gitignore  README.md  bootstrap.py  config.toml  config.toml.example  pyproject.toml
docs/: how-it-works.md
docs/plans/: fix-orphan-commits.md
src/email_bot/: claude_runner.py  gmail_client.py  main.py  projects.py
tests/: main.py  test_claude_runner.py  test_gmail_client.py  test_main.py  test_projects.py
