[project]
name = "email-bot"
version = "0.1.0"
description = "Multi-project e-mail bot: laat Claude Code site-wijzigingen doen via mail naar *@harmsen.nl."
readme = "README.md"
authors = [{ name = "hpharmsen", email = "hp@harmsen.nl" }]
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "Pillow>=10.4",
]

[project.scripts]
email-bot = "email_bot.main:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.build-backend]
module-name = "email_bot"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
